Barra de navegacion responsive

--- a/home.html
+++ b/home.html
@@ -18,26 +18,23 @@
                 <div class="contenido">
                     <header>
                         <div class="logo">
-                            <i class="fa-brands fa-codepen"></i>
-                            <h1>Pedro</h1>
+                            <a href="#">Pedro</a>
                         </div>
-                        <nav id="nav" class="">
-                            <a href="#inicio">Inicio</a>
-                            <a href="#habilidades">Habilidades</a>
-                            <a href="trabajos">Trabajos</a>
-                            <a href="#contacto">Contacto</a>
+                        <!-- Barra de navegacion -->
+                        <nav id="menu">
+                            <ul>
+                                <li><a href="">Inicio</a></li>
+                                <li><a href="">Habilidades</a></li>
+                                <li><a href="">Trabajos</a></li>
+                                <li><a href="">Contacto</a></li>
+                            </ul>
                         </nav>
-
-                        <!-- Icono menu responsive -->
-                        <div id="icono-nav" onclick="responsiveMenu()">
-                            <i class="fa-solid fa-bars"></i>
+                        
+                        <!-- icono menu responsive -->
+                        <div class="menu-responsive">
+                            <i class="fa fa-bars"></i>
                         </div>
-
-                        <div class="redes">
-                            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                            <a href="#"><i class="fa-brands fa-github"></i></a>
-                        </div>
-                    </header>
+                    </header>  
 
                     <div class="fila">
                         <div class="col">
